--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@
 }
 
 .dropdown-item{
-    font-size: xx-small;
+    font-size: x-small;
 }
 
 .separador{
@@ -70,7 +70,7 @@
 @media (max-width:900px) {
     .accordion-body{
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         flex-wrap: wrap;
         width: 100%;
     }
@@ -80,6 +80,11 @@
     .inicio{
         display: flex;
         flex-direction: column;
+    }
+
+    .intro{
+        padding: 0;
+        font-size: xx-small;
     }
 
     .accordion-body{
@@ -154,4 +159,69 @@
   }
 /*  */
 
-   
+/* BOTON WP */
+.btn-wsp{
+    position:fixed;
+    width:60px;
+    height:60px;
+    line-height: 63px;
+    bottom:25px;
+    right:25px;
+    background:#25d366;
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    font-size:35px;
+    box-shadow: 0px 1px 10px rgb(255, 255, 255);
+    z-index:100;
+    transition: all 300ms ease;
+  }
+  
+  .btn-wsp:hover{
+    background: #20ba5a;
+  }
+  @media only screen and (min-width:320px) and (max-width:600px){
+    .btn-wsp{
+        width:40px;
+        height:40px;
+        line-height: 35px;
+  }
+  }
+  /*  */
+
+  /* FOOTER */
+  #footer{
+    background-color: #ffffff;
+    color: grey;
+  }
+  
+  #acomodar{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  
+  footer{
+    background-color: black;
+  }
+  
+  #piePagina{
+    margin-top: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+  
+  /* a:link, a:visited, a:active {
+    text-decoration:none;
+    color: white;
+    font-size: small;
+  } */
+
+#link{
+    text-decoration:none
+  }
+  
+  /*  */
