--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@
 
 
 /* LOGO */
+.logo1{
+    width: 150px;
+    height: 80px;
+}
+
 .logo{
     width: 150px;
     height: 80px;
@@ -80,6 +85,11 @@
     .inicio{
         display: flex;
         flex-direction: column;
+    }
+
+    .logo1{
+        width: 100%;
+        height: 100px;
     }
 
     .intro{
