--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
     display: flex;
     flex-direction: row;
 }
+
 /*  */
 
 /* LOGO */
@@ -37,6 +38,8 @@
 
 /* CARRITO */
 .carrito{
+    display: flex;
+    flex-direction: row;
     width: 30px;
     height: 30px;
     margin-left: 250px;
@@ -95,12 +98,18 @@
 
     .logo1{
         width: 100%;
-        height: 100px;
-    }   
+        height: 120px;
+    }  
+    
 
     .intro{
         padding: 0;
         font-size: small;
+    }
+
+    .carrito{
+        margin-top: 30px;
+        margin-left: 0;
     }
 
     .accordion-body{
