--- a/style.css
+++ b/style.css
@@ -34,6 +34,11 @@
     width: 150px;
     height: 80px;
 }
+
+.logom{
+    width:50px ;
+    height:50px ;
+}
 /*  */
 
 /* CARRITO */
@@ -80,6 +85,19 @@
 }
 /*  */
 
+/* VIDEO YT */
+.contenedor{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.video{
+    border-radius: 20px;
+    margin: 20px;
+}
+/*  */
+
 /* MEDIA QUERY */
 @media (max-width:900px) {
     .accordion-body{
@@ -100,7 +118,19 @@
         width: 100%;
         height: 120px;
     }  
+
+    .contenedor{
+        margin-top: 40px;
+        margin-bottom: 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
     
+    .video{
+        width: 100%;
+    }
 
     .intro{
         padding: 0;
