--- a/style.css
+++ b/style.css
@@ -119,6 +119,17 @@
         height: 120px;
     }  
 
+    .logom{
+      width: 20px;
+      height: 20px;
+    }
+
+    .video{
+      border-radius: 20px;
+      margin: 20px;
+      height: 150px;
+  }
+
     .contenedor{
         margin-top: 40px;
         margin-bottom: 40px;
