--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@
     flex-direction: row;
 }
 
+.navegacion{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 /*  */
 
 /* LOGO */
@@ -47,7 +54,7 @@
     flex-direction: row;
     width: 30px;
     height: 30px;
-    margin-left: 250px;
+    margin-right: 50px;
 }
 /*  */
 
@@ -117,7 +124,12 @@
     .logo1{
         width: 100%;
         height: 120px;
-    }  
+    } 
+    
+    .navegacion{
+      justify-content: center;
+      gap: 10px;   
+    }
 
     .logom{
       width: 20px;
