--- a/style.css
+++ b/style.css
@@ -25,8 +25,17 @@
 .navegacion{
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: space-between;
+  align-items: center;
+}
+
+.navv{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 7px;
 }
 
 /*  */
@@ -115,7 +124,7 @@
     }
 }
 
-@media (max-width:500px) {
+@media (max-width:505px) {
     .inicio{
         display: flex;
         flex-direction: column;
@@ -125,11 +134,20 @@
         width: 100%;
         height: 120px;
     } 
+
+    form{
+      width:200px ;
+    }
     
-    .navegacion{
+    /* .navegacion{
       flex-direction: column;
       justify-content: center;
       gap: 10px;   
+    } */
+
+    .navegacion{
+      justify-content: center;
+      gap: 7px;
     }
 
     .logom{
@@ -159,11 +177,6 @@
     .intro{
         padding: 0;
         font-size: small;
-    }
-
-    .carrito{
-        margin-top: 30px;
-        margin-left: 0;
     }
 
     .accordion-body{
