boton de menu sacado(comentado)

--- a/style.css
+++ b/style.css
@@ -30,13 +30,13 @@
   align-items: center;
 }
 
-.navv{
+/* .navv{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding-bottom: 7px;
-}
+} */
 
 /*  */
 
