--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 /* INICIO */
 .inicio{
     display: flex;
+    background-color: #F9BECC;
     flex-direction: row;
     justify-content: space-between;
 }
@@ -127,13 +128,10 @@
 @media (max-width:505px) {
     .inicio{
         display: flex;
-        flex-direction: column;
+        
     }
 
-    .logo1{
-        width: 100%;
-        height: 120px;
-    } 
+    
 
     form{
       width:200px ;
@@ -206,7 +204,7 @@
     cursor: pointer;
     user-select: none;
     overflow: hidden;
-    background-color: rgb(255, 187, 204);;
+    background-color: rgb(255, 255, 255);;
     color: rgb(0, 0, 0);
     z-index: 1;
     font-family: inherit;
