--- a/style.css
+++ b/style.css
@@ -128,10 +128,13 @@
 @media (max-width:505px) {
     .inicio{
         display: flex;
-        
+        /* flex-direction: column; */
     }
 
-    
+    /* .logo1{
+        width: 100%;
+        height: 120px;
+    }  */
 
     form{
       width:200px ;
@@ -204,7 +207,8 @@
     cursor: pointer;
     user-select: none;
     overflow: hidden;
-    background-color: rgb(255, 255, 255);;
+    /* background-color: rgb(255, 187, 204);; */
+    background-color: #A32C37;
     color: rgb(0, 0, 0);
     z-index: 1;
     font-family: inherit;
@@ -282,7 +286,8 @@
 
   /* FOOTER */
   #footer{
-    background-color: #ffffff;
+    /* background-color: #ffffff; */
+    background-color: #F9BECC;
     color: grey;
   }
   
